<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Sugarcast</string>
    <string name="title_activity_main">Sugarcast</string>
    <string name="welcome_message">BG Scout!\n</string>
    <string name="action_settings">Settings</string>
    <string name="manage_service">Start service</string>
    <string name="cgm_service_title">CGM Monitoring service</string>
    <string name="device_1">Device 1</string>
    <string name="device_2">Device 2</string>
    <string name="device_3">Device 3</string>
    <string name="device_4">Device 4</string>
    <string name="pref_device_type_title">Type of device</string>
    <string name="pref_device_mongo_upload_title">Upload to Mongo DB</string>
    <string name="pref_remote_mongo_uri_default" formatted="false">mongodb://{user}:{password}@{host}.mongolab.com:{11111}/{database}</string>
    <string name="pref_remote_mongo_uri_dialog_title">Enter MongoDB URI</string>
    <string name="pref_remote_mongo_uri_dialog_msg" formatted="false">Replace example values in {}\'s with your correct values</string>
    <string name="pref_device_remote_mongo_uri_title">MongoDB URI</string>
    <string name="pref_device_high_title">High Threshold</string>
    <integer name="pref_default_device_high">180</integer>
    <string name="pref_device_low_title">Low Threshold</string>
    <integer name="pref_default_device_low">60</integer>
    <string name="high_ring_tone_title">High ringtone</string>
    <string name="low_ring_tone_title">Low ringtone</string>
    <string name="pref_device_remote_mongo_col_title">Collection Name</string>
    <string name="pref_remote_mongo_col_dialog_title">Enter Collection name</string>
    <string name="pref_remote_mongo_col_dialog_msg">This is the name of the collection where the CGM data will be stored</string>
    <string name="Stop">Stop</string>
    <string name="Start">Start</string>
    <string name="get_data_button">Get poll</string>
    <string name="poller_button">Poll</string>
    <string name="crash_toast_text">Capturing crash</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="prefs_mqtt_header">Push notifications</string>
    <string name="prefs_mqtt_header_summ">Settings related to push notifications</string>
    <string name="prefs_cat_monitors">Monitors</string>
    <string name="device_mongo">Mongo Settings</string>
    <string name="device_push">Push Notification settings</string>
    <string name="device_ns">Nightscout API settings</string>
    <string name="prefs_cat_threshold">Thresholds</string>
    <string name="last_g4_download">lastG4Download</string>
    <string name="uploader_battery_default" formatted="false">%</string>
    <string name="device_battery_default" formatted="false">%</string>
    <string name="default_bg_text">---</string>
    <string name="default_name_text">---</string>
    <string name="device_g4">G4 Options</string>
    <string name="pref_device_unit_title">Units</string>
    <string name="dump_stats">Dump Stats</string>
    <string name="device_battery_label">CGM</string>
    <string name="uploader_battery_label">Uploader</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">closed</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_device">Sugarcaster-multi</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="privacy_title">Privacy</string>
    <string name="pref_disable_acra">Crash Collection</string>
    <string name="pref_acra_disabled">Enable crash reporting</string>
    <string name="pref_acra_enabled">Disable crash reporting</string>
    <string name="pref_acra_syslog">Include logs</string>
    <string name="pref_acra_syslog_enabled">Include logs in the crash reports</string>
    <string name="pref_acra_syslog_disabled">Do not include logs in the crash reports</string>
    <string name="pref_acra_deviceid">DeviceID reporting</string>
    <string name="pref_acra_deviceid_enabled">Enable reporting of DeviceID</string>
    <string name="pref_acra_deviceid_disabled">Disable reporting DeviceID</string>
    <string name="pref_acra_user_email">Email</string>
    <string name="pref_acra_user_email_summary">Email to include with crash reports</string>
    <string name="pref_device_critical_high_title">Critical high</string>
    <string name="critical_high_ringtone_title">Critical high ringtone</string>
    <string name="pref_device_critical_low_title">Critical Low</string>
    <string name="critical_low_ringtone_title">Critical low ringtone</string>
    <string name="Call">Call PWD</string>
    <string name="battery_balance_summary" formatted="false">If the Dexcom G4 drops below 40% battery and the uploader has more than 40% battery, the uploader will charge the CGM.</string>
    <string name="pref_time_sync_summary">Synchronizes the Dexcom G4 clock with the phone clock</string>
    <string name="prefs_enable_device">Enable this device</string>
    <string name="prefs_batt_balance_title">Battery balancing</string>
    <string name="device_enable_summary">Enable collection of data from this device</string>
    <string name="pref_enable_push_notifications">Enable Push Notifications</string>
    <string name="prefs_enable_pebble">Enable Pebble notification</string>
    <string name="prefs_nightscout_title">Nightscout API Upload</string>
    <string name="rest_api_summary">The REST API is an alternative to direct mongodb upload</string>
    <string name="prefs_api_title">API Base URL</string>
    <string name="prefs_api_diaglog_title">Enter Base API URL</string>
    <string name="prefs_default_api_value" formatted="false">http://{YOUR-API-SERVER}/api</string>
    <string name="prefs_api_dialog_message" formatted="false">This only the base URL, the uploader will automatically append /entries for the POST</string>
    <string name="prefs_api_secret_title">API Secret key</string>
    <string name="prefs_api_dialog_title">Enter your API key</string>
    <string name="prefs_category_privacy_summary">Privacy settings. No private information will be collected</string>
</resources>
