<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceScreen
        android:key="button_device_1"
        android:title="@string/device_1"
        android:persistent="false">
        <SwitchPreference
            android:title="Enable this device"
            android:key="device_1_enable"
            android:disableDependentsState="false"
            android:summary="Enable collection of data from this device">
        </SwitchPreference>
        <EditTextPreference
            android:key="device_1_name"
            android:dependency="device_1_enable"
            android:title="@string/pref_title_display_name"
            android:defaultValue="@string/pref_default_display_name"
            android:selectAllOnFocus="true"
            android:inputType="textCapWords"
            android:capitalize="words"
            android:singleLine="true"
            android:maxLines="1" />
        <ListPreference
            android:key="device_1_type"
            android:dependency="device_1_enable"
            android:title="@string/pref_device_type_title"
            android:defaultValue="-1"
            android:entries="@array/pref_device_type_titles"
            android:entryValues="@array/pref_device_type_values"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null" />
        <!--TODO add code to dynamically disable this-->
        <EditTextPreference
            android:title="@string/pref_device_remote_mongo_uri_title"
            android:dependency="device_1_enable"
            android:key="device_1_mongo_uri"
            android:selectAllOnFocus="true"
            android:inputType="text"
            android:dialogTitle="@string/pref_remote_mongo_uri_dialog_title"
            android:dialogMessage="@string/pref_remote_mongo_uri_dialog_msg"
            android:defaultValue="@string/pref_remote_mongo_uri_default"/>
        <EditTextPreference
            android:title="@string/pref_device_remote_mongo_col_title"
            android:dependency="device_1_enable"
            android:key="device_1_mongo_col"
            android:selectAllOnFocus="true"
            android:inputType="text"
            android:dialogTitle="@string/pref_remote_mongo_col_dialog_title"
            android:dialogMessage="@string/pref_remote_mongo_col_dialog_msg"/>
        <EditTextPreference
            android:key="device_1_high_threshold"
            android:dependency="device_1_enable"
            android:title="@string/pref_device_high_title"
            android:defaultValue="@string/pref_default_device_high"
            android:selectAllOnFocus="true"
            android:inputType="number"/>
        <EditTextPreference
            android:key="device_1_low_threshold"
            android:dependency="device_1_enable"
            android:title="@string/pref_device_low_title"
            android:defaultValue="@string/pref_default_device_low"
            android:selectAllOnFocus="true"
            android:inputType="number"/>
        <RingtonePreference
            android:key="device_1_high_ringtone"
            android:dependency="device_1_enable"
            android:title="@string/high_ring_tone_title"
            android:ringtoneType="notification"
            android:defaultValue="content://settings/system/notification_sound" />
        <RingtonePreference
            android:key="device_1_low_ringtone"
            android:dependency="device_1_enable"
            android:title="@string/low_ring_tone_title"
            android:ringtoneType="notification"
            android:defaultValue="content://settings/system/notification_sound" />
    </PreferenceScreen>

    <PreferenceScreen
        android:key="button_device_2"
        android:title="@string/device_2"
        android:persistent="false">
        <SwitchPreference
            android:title="Enable this device"
            android:key="device_2_enable"
            android:disableDependentsState="false"
            android:summary="Enable collection of data from this device">
        </SwitchPreference>
        <EditTextPreference
            android:key="device_2_name"
            android:dependency="device_2_enable"
            android:title="@string/pref_title_display_name"
            android:defaultValue="@string/pref_default_display_name"
            android:selectAllOnFocus="true"
            android:inputType="textCapWords"
            android:capitalize="words"
            android:singleLine="true"
            android:maxLines="1" />
        <ListPreference
            android:key="device_2_type"
            android:dependency="device_2_enable"
            android:title="@string/pref_device_type_title"
            android:defaultValue="-1"
            android:entries="@array/pref_device_type_titles"
            android:entryValues="@array/pref_device_type_values"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null" />
        <!--TODO add code to dynamically disable this-->
        <EditTextPreference
            android:title="@string/pref_device_remote_mongo_uri_title"
            android:dependency="device_2_enable"
            android:key="device_2_mongo_uri"
            android:selectAllOnFocus="true"
            android:inputType="text"
            android:dialogTitle="@string/pref_remote_mongo_uri_dialog_title"
            android:dialogMessage="@string/pref_remote_mongo_uri_dialog_msg"
            android:defaultValue="@string/pref_remote_mongo_uri_default"/>
        <EditTextPreference
            android:title="@string/pref_device_remote_mongo_col_title"
            android:dependency="device_2_enable"
            android:key="device_2_mongo_col"
            android:selectAllOnFocus="true"
            android:inputType="text"
            android:dialogTitle="@string/pref_remote_mongo_col_dialog_title"
            android:dialogMessage="@string/pref_remote_mongo_col_dialog_msg"/>
        <EditTextPreference
            android:key="device_2_high_threshold"
            android:dependency="device_2_enable"
            android:title="@string/pref_device_high_title"
            android:defaultValue="@string/pref_default_device_high"
            android:selectAllOnFocus="true"
            android:inputType="number"/>
        <EditTextPreference
            android:key="device_2_low_threshold"
            android:dependency="device_2_enable"
            android:title="@string/pref_device_low_title"
            android:defaultValue="@string/pref_default_device_low"
            android:selectAllOnFocus="true"
            android:inputType="number"/>
        <RingtonePreference
            android:key="device_2_high_ringtone"
            android:dependency="device_2_enable"
            android:title="@string/high_ring_tone_title"
            android:ringtoneType="notification"
            android:defaultValue="content://settings/system/notification_sound" />
        <RingtonePreference
            android:key="device_2_low_ringtone"
            android:title="@string/low_ring_tone_title"
            android:ringtoneType="notification"
            android:defaultValue="content://settings/system/notification_sound" />
    </PreferenceScreen>

    <PreferenceScreen
        android:key="button_device_3"
        android:title="@string/device_3"
        android:persistent="false">
        <SwitchPreference
            android:title="Enable this device"
            android:key="device_3_enable"
            android:disableDependentsState="false"
            android:summary="Enable collection of data from this device">
        </SwitchPreference>
        <EditTextPreference
            android:key="device_3_name"
            android:dependency="device_3_enable"
            android:title="@string/pref_title_display_name"
            android:defaultValue="@string/pref_default_display_name"
            android:selectAllOnFocus="true"
            android:inputType="textCapWords"
            android:capitalize="words"
            android:singleLine="true"
            android:maxLines="1" />
        <ListPreference
            android:key="device_3_type"
            android:dependency="device_3_enable"
            android:title="@string/pref_device_type_title"
            android:defaultValue="-1"
            android:entries="@array/pref_device_type_titles"
            android:entryValues="@array/pref_device_type_values"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null" />
        <!--TODO add code to dynamically disable this-->
        <EditTextPreference
            android:title="@string/pref_device_remote_mongo_uri_title"
            android:dependency="device_3_enable"
            android:key="device_3_mongo_uri"
            android:selectAllOnFocus="true"
            android:inputType="text"
            android:dialogTitle="@string/pref_remote_mongo_uri_dialog_title"
            android:dialogMessage="@string/pref_remote_mongo_uri_dialog_msg"
            android:defaultValue="@string/pref_remote_mongo_uri_default"/>
        <EditTextPreference
            android:title="@string/pref_device_remote_mongo_col_title"
            android:dependency="device_3_enable"
            android:key="device_3_mongo_col"
            android:selectAllOnFocus="true"
            android:inputType="text"
            android:dialogTitle="@string/pref_remote_mongo_col_dialog_title"
            android:dialogMessage="@string/pref_remote_mongo_col_dialog_msg"/>
        <EditTextPreference
            android:key="device_3_high_threshold"
            android:dependency="device_3_enable"
            android:title="@string/pref_device_high_title"
            android:defaultValue="@string/pref_default_device_high"
            android:selectAllOnFocus="true"
            android:inputType="number"/>
        <EditTextPreference
            android:key="device_3_low_threshold"
            android:dependency="device_3_enable"
            android:title="@string/pref_device_low_title"
            android:defaultValue="@string/pref_default_device_low"
            android:selectAllOnFocus="true"
            android:inputType="number"/>
        <RingtonePreference
            android:key="device_3_high_ringtone"
            android:dependency="device_3_enable"
            android:title="@string/high_ring_tone_title"
            android:ringtoneType="notification"
            android:defaultValue="content://settings/system/notification_sound" />
        <RingtonePreference
            android:key="device_3_low_ringtone"
            android:dependency="device_3_enable"
            android:title="@string/low_ring_tone_title"
            android:ringtoneType="notification"
            android:defaultValue="content://settings/system/notification_sound" />
    </PreferenceScreen>

    <PreferenceScreen
        android:key="button_device_4"
        android:title="@string/device_4"
        android:persistent="false">
        <SwitchPreference
            android:title="Enable this device"
            android:key="device_4_enable"
            android:disableDependentsState="false"
            android:summary="Enable collection of data from this device">
        </SwitchPreference>
        <EditTextPreference
            android:key="device_4_name"
            android:dependency="device_4_enable"
            android:title="@string/pref_title_display_name"
            android:defaultValue="@string/pref_default_display_name"
            android:selectAllOnFocus="true"
            android:inputType="textCapWords"
            android:capitalize="words"
            android:singleLine="true"
            android:maxLines="1" />
        <ListPreference
            android:key="device_4_type"
            android:dependency="device_4_enable"
            android:title="@string/pref_device_type_title"
            android:defaultValue="-1"
            android:entries="@array/pref_device_type_titles"
            android:entryValues="@array/pref_device_type_values"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null" />
        <!--TODO add code to dynamically disable this-->
        <EditTextPreference
            android:title="@string/pref_device_remote_mongo_uri_title"
            android:dependency="device_4_enable"
            android:key="device_4_mongo_uri"
            android:selectAllOnFocus="true"
            android:inputType="text"
            android:dialogTitle="@string/pref_remote_mongo_uri_dialog_title"
            android:dialogMessage="@string/pref_remote_mongo_uri_dialog_msg"
            android:defaultValue="@string/pref_remote_mongo_uri_default"/>
        <EditTextPreference
            android:title="@string/pref_device_remote_mongo_col_title"
            android:dependency="device_4_enable"
            android:key="device_4_mongo_col"
            android:selectAllOnFocus="true"
            android:inputType="text"
            android:dialogTitle="@string/pref_remote_mongo_col_dialog_title"
            android:dialogMessage="@string/pref_remote_mongo_col_dialog_msg"/>
        <EditTextPreference
            android:key="device_4_high_threshold"
            android:dependency="device_4_enable"
            android:title="@string/pref_device_high_title"
            android:defaultValue="@string/pref_default_device_high"
            android:selectAllOnFocus="true"
            android:inputType="number"/>
        <EditTextPreference
            android:key="device_4_low_threshold"
            android:dependency="device_4_enable"
            android:title="@string/pref_device_low_title"
            android:defaultValue="@string/pref_default_device_low"
            android:selectAllOnFocus="true"
            android:inputType="number"/>
        <RingtonePreference
            android:key="device_4_high_ringtone"
            android:dependency="device_4_enable"
            android:title="@string/high_ring_tone_title"
            android:ringtoneType="notification"
            android:defaultValue="content://settings/system/notification_sound" />
        <RingtonePreference
            android:key="device_4_low_ringtone"
            android:dependency="device_4_enable"
            android:title="@string/low_ring_tone_title"
            android:ringtoneType="notification"
            android:defaultValue="content://settings/system/notification_sound" />
    </PreferenceScreen>
</PreferenceScreen>
