<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ktind.cgm.bgscout.DeviceActivity$PlaceholderFragment">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main_display"
            android:padding="0dp"
            android:cropToPadding="false"
            android:layout_margin="0dp"
            android:layout_centerInParent="true"
            android:layout_alignParentTop="false"
            android:layout_alignParentLeft="false"
            android:layout_alignParentBottom="false"
            android:layout_alignParentRight="false"
            android:adjustViewBounds="false"
            android:background="#ff00AA00"
            android:src="@drawable/readingbackground" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/direction_image"
            android:layout_alignEnd="@id/main_display"
            android:layout_alignStart="@id/main_display"
            android:layout_alignTop="@+id/main_display"
            android:layout_alignBottom="@+id/main_display"
            android:src="@drawable/flat"
            android:visibility="visible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="---"
            android:id="@+id/reading_text"
            android:layout_alignStart="@id/direction_image"
            android:layout_alignTop="@+id/direction_image"
            android:layout_alignBottom="@+id/direction_image"
            android:gravity="center"
            android:layout_alignRight="@+id/direction_image"
            android:layout_alignLeft="@+id/direction_image"
            android:textSize="40sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/uploader_battery_indicator"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="false"
            android:adjustViewBounds="false"
            android:layout_alignParentBottom="false"
            android:layout_gravity="left"
            android:layout_alignBottom="@+id/main_display"
            android:layout_toLeftOf="@+id/main_display"
            android:background="#ff3c3f41"
            android:src="@drawable/batteryblank" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/uploader_battery_default"
            android:id="@+id/uploader_battery_label"
            android:gravity="center"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="false"
            android:textStyle="bold"
            android:layout_alignLeft="@+id/uploader_battery_indicator"
            android:layout_alignRight="@+id/uploader_battery_indicator"
            android:textColor="#ffffffff"
            android:layout_alignTop="@+id/uploader_battery_indicator"
            android:layout_alignBottom="@+id/uploader_battery_indicator" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/uploader_battery_label"
            android:id="@+id/uploader_battery_identifier"
            android:layout_alignParentLeft="false"
            android:layout_below="@+id/uploader_battery_indicator"
            android:layout_alignParentStart="false"
            android:layout_alignBaseline="@+id/uploader_battery_indicator"
            android:gravity="center"
            android:layout_alignLeft="@+id/uploader_battery_indicator"
            android:layout_alignParentEnd="false"
            android:layout_marginLeft="-10dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/deviceBattery"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="false"
            android:adjustViewBounds="false"
            android:layout_alignParentBottom="false"
            android:layout_gravity="right"
            android:layout_alignParentRight="false"
            android:layout_alignParentEnd="false"
            android:layout_alignTop="@+id/main_display"
            android:layout_toRightOf="@+id/main_display"
            android:background="#ff3c3f41"
            android:src="@drawable/batteryblank" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/device_battery_default"
            android:id="@+id/device_battery_label"
            android:layout_alignParentRight="false"
            android:layout_alignParentBottom="false"
            android:layout_alignParentEnd="false"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_alignLeft="@+id/deviceBattery"
            android:layout_alignTop="@+id/deviceBattery"
            android:layout_alignBottom="@+id/deviceBattery"
            android:layout_alignRight="@+id/deviceBattery"
            android:textColor="#ffffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/device_battery_label"
            android:id="@+id/device_battery_identifier"
            android:layout_alignParentRight="false"
            android:layout_below="@+id/deviceBattery"
            android:layout_alignParentBottom="false"
            android:layout_alignRight="@+id/deviceBattery"
            android:layout_alignParentEnd="false" />

    </RelativeLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/app_name"
        android:textColor="#ff00AA00"
        android:textSize="45sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/name"
        android:layout_alignStart="@id/app_name"
        android:layout_alignEnd="@id/app_name"
        android:layout_below="@+id/app_name"
        android:gravity="center"
        android:visibility="invisible" />

</RelativeLayout>
